static/css/style.css
nav .brand-logo {
    font-size: 1.4rem;
    padding-left: 20px;
}

.h2-front {
    position: absolute;
    right: 50%;
    top: 40%;
}

body {
    background-color: rgba(255, 20, 20, 0.02);
}


nav {
    position: fixed;
    z-index: 10;
}

.btn-container {
    position: relative;
    top: 30vh;
}

.btn-container a {
    margin: 2vh;
    background-color: rgba(223, 1, 1, 1);
    border-radius: 10%;
}

.btn-container a:hover {
    background-color: rgba(223, 1, 1, 0.8);
}

.main-image {
    height: 100vh;
    width: 100%;
    background-image: url(../images/business.jpg);
    background-repeat: no-repeat;
    top: 0;
    position: absolute;
    z-index: -1;
}

.social-media-container {
    margin-top: 85vh;
}

.social-media-container i {
    font-size: 50px;
    margin: 23px;
}

.header-page {
    position: relative;
    top: 20vh;
    font-size: 50px;
    font-family: fantasy;
}


.icons-exp-container {
    font-size: 50px;
}

.icons-exp-container p {
    font-size: 20px;
}

.icons-exp-container i {
    color: red;
}

.social-media-container i {
    color: red;
}

.container {
    margin: auto;
}

.flashes h4 {
    line-height: 2;
}

  body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

  main {
    flex: 1 0 auto;
  }

